--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: education-point-backend
     runtime: node
     rootDir: backend
+    plan: free
     buildCommand: npm install
     startCommand: npm start
     envVars:
