--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://EducationPoint:educationpoint@educationpoint.bvrlwvk.mongodb.net/
+MONGO_URI=mongodb://EducationPoint:educationpoint@ac-fsz63gw-shard-00-00.bvrlwvk.mongodb.net:27017,ac-fsz63gw-shard-00-01.bvrlwvk.mongodb.net:27017,ac-fsz63gw-shard-00-02.bvrlwvk.mongodb.net:27017/?ssl=true&replicaSet=atlas-tjubde-shard-0&authSource=admin&retryWrites=true&w=majority&appName=EducationPoint
 JWT_SECRET=education_point_secret_key_2023
 NODE_ENV=development
 EMAIL_USER=your-email@gmail.com
