Netlify changes done

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-# Production API URL - Replace with your actual backend URL
-VITE_API_URL=https://your-production-backend-url.com/api
+# Production API URL - Render deployed backend
+VITE_API_URL=https://education-point.onrender.com/api
