--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -4,6 +4,7 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  VITE_API_URL = "https://education-point.onrender.com/api"
 
 # Redirect all routes to index.html for SPA routing
 [[redirects]]
